# advent-of-code

./: .gitignore  README.md
2020/: pyproject.toml
2020/01/: README.md  part1.py  part2.py  target_dict.py
2020/02/: README.md  part1.py  part2.py  password_rules.py
2020/03/: README.md  part1.py  part2.py  periodic_grid.py
2020/04/: README.md  part1.py  part2.py  passport.py
2020/05/: README.md  boarding_pass.py  part1.py  part2.py
2020/06/: README.md  part1.py  part2.py
2020/07/: README.md  bags.py  part1.py  part2.py  rules.py
2020/08/: README.md  code_runner.py  part1.py  part2.py
2020/09/: README.md  part1.py  part2.py  sum_check.py
2020/10/: README.md  jolt.py  part1.py  part2.py
2020/11/: README.md  part1.py  part2.py  seating_plan.py
2020/12/: README.md  part1.py  part2.py  ship.py
2020/13/: README.md  mod_calcs.py  part1.py  part2.py
2020/14/: README.md  masked_memory_machine.py  part1.py  part2.py
2020/15/: README.md  counting.py  input  part1.py  part2.py
2020/16/: README.md  part1.py  part2.py  ranges.py
2020/17/: README.md  cube.py  hypercube.py  part1.py  part2.py
2020/18/: README.md  part1.py  part2.py  weird_math.py
2020/19/: README.md  part1.py  part2.py  rule.py
2020/20/: README.md  part1.py  part2.py  sea_monster.py  tiles.py
2020/21/: README.md  part1.py  part2.py
2020/22/: README.md  combat.py  part1.py  part2.py  recursive_combat.py
2020/23/: README.md  cups.py  part1.py  part2.py
2020/24/: README.md  hex_grid.py  part1.py  part2.py
2020/25/: README.md  encryption.py  part1.py
2022/: pyproject.toml
(+160 files in other folders)
