[tool.poetry]
name = "aoc-2020"
version = "0.1.0"
description = "My solutions to the 2020 Advent of Code problems."
authors = ["Matthias Heinz <heinz.matthias.3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
